Fixed minor form vertical alignment bug.

--- a/docs/app.css
+++ b/docs/app.css
@@ -1907,6 +1907,11 @@ a.tag:hover {
   padding-left: 1em;
   padding-right: 1em; }
 
+.buttons .field {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
 .container.is-fluid {
   max-width: none; }
 
