--- a/docs/home.css
+++ b/docs/home.css
@@ -979,6 +979,11 @@ a.box:active {
   padding-left: 1em;
   padding-right: 1em; }
 
+.buttons .field {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
 .container {
   margin: 0 auto;
   position: relative; }
