--- a/docs/widget.css
+++ b/docs/widget.css
@@ -1886,6 +1886,11 @@ a.tag:hover {
   padding-left: 1em;
   padding-right: 1em; }
 
+.buttons .field {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
 .container.is-fluid {
   max-width: none; }
 
