--- a/sass/overwrite/elements_button.sass
+++ b/sass/overwrite/elements_button.sass
@@ -8,3 +8,7 @@
   &.is-padded
     padding-left: 1em
     padding-right: 1em
+
+.buttons
+  .field
+    align-items: center
